--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -6,11 +6,7 @@
   url: /archive/
   external: false
 
-- title: about
-  url: /about/
-  external: false # set true if you using external link, see below
-
 # Example:
-# - title: github
-#   url: https://github.com/piharpi/jekyll-klise
-#   external: true
+- title: github
+  url: https://github.com/protectyrjewels
+  external: true
