Set email address

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author:
   github: protectyrjewels # github username
   twitter: twitter_username # twitter username
   facebook: facebook_username # facebook username
-  email: your-email@email.com # email adress
+  email: a@adolfosilva.dev # email adress
   avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
